# Whispnote-2

./: .env.example  .gitignore  ALL_CONTRIBUTIONS_COMPLETE.md  API_TIMEOUT_FIX_DOCUMENTATION.md  CHANGELOG.md  CORPUS_STATISTICS_EXPLAINED.md  DEPLOYMENT_SUMMARY.md  LICENSE  LICENSE.md  LLAMA_INTEGRATION_GUIDE.md  MANUAL_DEPLOYMENT_GUIDE.md  MOCK_API_GUIDE.md  ORGANIZED_STRUCTURE.md  PROFILE_DASHBOARD_IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  Readme.md  SECURITY.md  SECURITY_FIX_REPORT.md  SWECHA_API_ISSUE.md  SWECHA_API_TEST_REPORT.md  SWECHA_DEPLOYMENT_STATUS.md  TECH_STACK.md  TIMEOUT_FIX_COMPLETE.md  app.py  app_backup.py  deploy_to_swecha.sh  fix_encoding.py  main.py  mock_swecha_api.py  pyproject.toml  requirements.txt  swecha_api_test_report_20250812_231331.json  swecha_api_test_report_20250824_112622.json  swecha_api_test_report_20250828_153516.json  test_all_contributions.py  test_api_timeout_fix.py  test_mock_api.py  test_swecha_contributions.py  test_timeout_config.py  (+1 more)
.gitlab/issue_templates/: bug.md  bug_report.md  default.md  documentation.md  feature_request.md  refactoring.md
.gitlab/merge_request_templates/: bug.md  bug_fix.md  default.md  documentation.md  feature_request.md  refactoring.md
docs/: CONTRIBUTING.md  FILE_CATEGORIZATION.md  PROJECT_OVERVIEW.md  TECH_STACK.md
scripts/: run.bat  run.sh
src/: __init__.py
src/ai/: __init__.py  keyword_extractor.py  llama_summarizer.py  ocr_reader.py  summarizer.py  whisper_transcriber.py
src/api/: __init__.py  swecha_api.py  swecha_auth_manager.py  swecha_config.py  swecha_config_mock.py  swecha_config_template.py
src/utils/: __init__.py  export_utils.py  storage.py  swecha_storage.py  text_processor.py
tests/: comprehensive_api_test.py  quick_test.py  swecha_endpoint_report.py  test_auth_endpoints.py  test_comprehensive_endpoints.py  test_swecha_api.py
whispnote_data/: config.json
whispnote_data/pending_swecha_uploads/: pending_2025-08-06T21-07-47.512146.json  pending_2025-08-08T00-03-45.351143.json
