# WhispNote Project Configuration
# This file defines the project metadata, dependencies, and tool configurations
[project]
name = "whispnote"
version = "2.0.0"
description = "AI-Powered Multilingual Voice Notes for Indian Languages"
readme = "Readme.md"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Swecha Team & WhispNote Contributors", email = "contact@swecha.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    # Core Streamlit app
    "streamlit>=1.28.0",
    "streamlit-webrtc>=0.47.0",
    # AI/ML Models
    "openai-whisper>=20231117",
    "torch>=1.13.0",
    "transformers>=4.21.0",
    "sentence-transformers>=2.2.0",
    "tf-keras>=2.15.0", # Fix for Keras 3 compatibility
    # Keyword extraction
    "keybert>=0.7.0",
    "scikit-learn>=1.1.0",
    # OCR
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
    "Pillow>=9.0.0",
    # Document export
    "python-docx>=0.8.11",
    "reportlab>=3.6.0",
    # HTTP requests for API integration
    "requests>=2.28.0",
    # Environment variable management
    "python-dotenv>=1.0.0",
    # Audio processing
    "librosa>=0.9.2",
    "pydub>=0.25.1",
    "soundfile>=0.10.3",
    # Data processing
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    # Utilities
    "pathlib2>=2.3.7",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
enhanced = [
    "tensorflow>=2.9.0",
    "spacy>=3.4.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.18.0",
]

[project.urls]
Homepage = "https://code.swecha.org/soai2025/techleads/soai-techlead-hackathon/whispnote"
Repository = "https://code.swecha.org/soai2025/techleads/soai-techlead-hackathon/whispnote.git"
Documentation = "https://code.swecha.org/soai2025/techleads/soai-techlead-hackathon/whispnote#readme"
"Bug Tracker" = "https://code.swecha.org/soai2025/techleads/soai-techlead-hackathon/whispnote/issues"

[project.scripts]
whispnote = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8+.
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    # pycodestyle
    "E4", "E7", "E9",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # Allow non-lowercase variable names in functions.
    "N806",
    # Allow unused variables when underscore-prefixed.
    "F841",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
